--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Gradle files
 .gradle/
 build/
+dist/
+java_src/
+original/
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -24,7 +27,7 @@ output.json
 *.keystore
 
 # Google Services (e.g. APIs or Firebase)
-google-services.json
+#google-services.json
 
 # Android Profiling
 *.hprof
